# rongchengfc

./: .gitignore  01初学.md  README.md  index.html  next.config.ts  package-lock.json  package.json
ops/pg_sync/: README.md
ops/pg_sync/python/: ai_enhance_image.py  collect_cdrcfc_images.py  crawl_cdrcfc.py  db_utils.py  image_pipeline_utils.py  process_cdrcfc_images.py  pyproject.toml  requirements.txt  run_sql_sync.py  sync_crawled_to_pg.py
ops/pg_sync/sql/: 00_create_database.sql  01_create_ingest_schema.sql  02_indexes.sql
prisma/: schema.prisma  seed.mjs
scripts/: scrape-cdrcfc.mjs
src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
src/app/about/: page.tsx
src/app/admin/: news-publisher.tsx  page.tsx
src/app/api/matches/: route.ts
src/app/api/news/: route.ts
src/app/api/products/: route.ts
src/app/login/: login-form.tsx  page.tsx
src/app/matches/: page.tsx
src/app/matches/[slug]/: page.tsx
src/app/news/: page.tsx
src/app/profile/: page.tsx  preferences-form.tsx
src/app/register/: page.tsx  register-form.tsx
src/app/shop/: page.tsx
src/app/team/: page.tsx
src/app/tickets/: page.tsx
src/app/verify-email/: page.tsx
src/components/layout/: sign-out-button.tsx  site-footer.tsx  site-header.tsx
src/components/site/: favorite-toggle.tsx  glass-card.tsx  metrics-grid.tsx  page-hero.tsx  player-grid.tsx  section-heading.tsx
src/components/ui/: page-frame.tsx  page-shell.tsx
src/lib/: auth.ts  data.ts  format.ts  prisma.ts  session.ts  tokens.ts  url.ts  validation.ts
src/types/: next-auth.d.ts
(+11 files in other folders)
